--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
@@ -33,6 +33,7 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <script src="/belly-button-challenge/static/js/app.js"></script>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
@@ -47,8 +48,8 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
+  <!-- <script src="./static/js/app.js"></script> -->
+  <!-- <script src="./static/js/bonus.js"></script> -->
   
 </body>
 
