--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  
 </head>
 
 <body>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+  
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
@@ -19,10 +21,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-3">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onclick="optionChanged(this.value);"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -33,9 +35,8 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
-        <script src="/belly-button-challenge/static/js/app.js"></script>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-4">
         <div id="gauge"></div>
       </div>
     </div>
@@ -48,7 +49,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <!-- <script src="./static/js/app.js"></script> -->
+  <script src="./static/js/app.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
   
 </body>
